crates/plotnik-lib/tests/05-typegen/alternations/error_union_branch_produces_value.txt
A = [
  X: (identifier) @x
  Y: (number) @y
]

Q = [
  (A)
  (number) @b
]
==== diagnostics ====
error: incompatible types: a branch produces a value but this is a union alternation
 --> query.ptk:6:5
  |
6 |   Q = [
  |  _____^
7 | |   (A)
8 | |   (number) @b
9 | | ]
  | |_^
  |
help: give every branch a branch label for an enum, e.g. `[A: ... B: ...]`
